--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -108,7 +108,7 @@ In order to be able to compare the light head and the relative pronoun, I zoom i
 
 I assume that the light head and the relative pronoun partly contain the same syntactic features. The features they have in common are case features (\tsc{k}) and what I here simplify as phi-features (ϕ). The light head and the relative pronoun differ from each other in that the relative pronoun has at least one feature in addition, which I call here \tsc{rel}.
 
-This system excludes the external-only type. An external-only type would be one in which the light head can delete the relative pronoun, but the relative pronoun cannot delete the light head. In my proposal, an element can be deleted if forms a constituent within the other element. Relative pronouns always contain one more feature than light heads: \tsc{rel}. From that it follows that the light head does not contain all features that the relative pronoun contains. Therefore, it is impossible for a relative pronoun to form a constituent within the light head.
+This system excludes the external-only type. An external-only type would be one in which the relative pronoun can be deleted, but the light head cannot be deleted. In my proposal, an element can be deleted if forms a constituent within the other element. Relative pronouns always contain one more feature than light heads: \tsc{rel}. From that it follows that the light head does not contain all features that the relative pronoun contains. Therefore, it is impossible for a relative pronoun to form a constituent within the light head.%too strong, effect of syncretism
 
 My last assumption makes crucial use of Nanosyntax. I assume that the only way in which languages differ is in their lexicon: different languages contain different lexical entries. In Nanosyntax, lexical entries have the form of constitutions, as those are the only objects that can be spelled out. This means that languages differ in how they organize their features into constituents. This has consequences for the deletion of light heads and relative pronouns, since they need to be contained in the other the be deleted. For light heads and relative pronouns the crucial difference is whether phi-features are case features are each spelled out by their own lexical entry or whether they form a portmanteau.
 
@@ -124,7 +124,7 @@ For each of the three languages types, I first give the constituency within ligh
 
 \subsection{The internal-only type}
 
-I start with the internal-only language type. In this type of language, the constituency is as shown in Figure \ref{fig:rel-lh-intonly-1}.
+I start with the internal-only type of language. In this type of language, the constituency is as shown in Figure \ref{fig:rel-lh-intonly-1}.
 
 \begin{figure}[htbp]
   \center
@@ -212,7 +212,7 @@ In Figure \ref{fig:nom-nom-intonly}, I give an example in which the relative pro
 \end{figure}
 
 I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
-The light head (the \tsc{nom}P) forms a constituent within the relative pronoun (the \tsc{rel}P), so the relative pronoun can delete the light head. I illustrate this by marking the content of the dashed circles for the light head gray.
+The light head (the \tsc{nom}P) forms a constituent within the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
 
 In Figure \ref{fig:nom-acc-intonly}, I give an example in which the relative pronoun bears a more complex case than the light head.
 
@@ -267,7 +267,7 @@ In Figure \ref{fig:nom-acc-intonly}, I give an example in which the relative pro
 \end{figure}
 
 I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
-The light head (the \tsc{nom}P) still forms a constituent within the relative pronoun (the \tsc{rel}P), so the relative pronoun can delete the light head. I illustrate this by marking the content of the dashed circles for the light head gray.
+The light head (the \tsc{nom}P) still forms a constituent within the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
 
 In Figure \ref{fig:acc-nom-intonly}, I give an example in which the light head bears a more complex case than the relative pronoun.
 
@@ -326,7 +326,7 @@ The \tsc{nom}P of the light head forms a constituent within the relative pronoun
 The \tsc{nom}P of the relative pronoun forms a constituent within the relative pronoun, but the light head does not contain the feature \tsc{rel} that forms a \tsc{rel}P.
 As a result, none of the elements can be absent. I illustrate this by leaving the content of both dashed circles unfilled.
 
-These comparisons correctly the derive the observed patterns in internal-only languages. Headless relatives in internal-only languages are grammatical when the internal and the external case match and when the internal case is more complex than the external case. They are ungrammatical when the external case is more complex than the internal case. That means that the relative pronoun can delete the light head, but the light head cannot delete the relative pronoun. I summarize this in \ref{tbl:overview-rel-light-mg}.
+These comparisons correctly the derive the observed patterns in internal-only languages. Headless relatives in internal-only languages are grammatical when the internal and the external case match and when the internal case is more complex than the external case. They are ungrammatical when the external case is more complex than the internal case. That means that the light head can be deleted, but the relative pronoun cannot be deleted. I summarize this in \ref{tbl:overview-rel-light-mg}.
 
 \begin{table}[htbp]
   \center
@@ -386,7 +386,7 @@ I continue with the matching type of language. In this type of language, the con
   \label{fig:rel-lh-matching}
 \end{figure}
 
-Just as in the internal-only type of language, the \tsc{rel}P has its own spellout and is merged as a prefix. The difference between the two language types lies in how the ϕP and the \tsc{k}P are spelled out. In the matching type of language, the ϕP and the \tsc{k}P both have their own spellout. As a result, the ϕP is moved over the \tsc{k}P (allowing the \tsc{k}P to form a constituent on its own, as only constituents can be spelled out). This crucially differs from the internal-only type of language, in which \tsc{k}P and ϕP are spelled out a by a single morpheme and no movement is taking place. In this section I show how this difference leads to different deletion possibilities and, therefore, to different grammaticality patterns. In Chapter \ref{ch:deriving-matching}, I motivate this analysis I put forward for the matching type of language.
+Like in the internal-only type of language, the \tsc{rel}P has its own spellout and is merged as a prefix. The difference between the two language types lies in how the ϕP and the \tsc{k}P are spelled out. In the matching type of language, the ϕP and the \tsc{k}P both have their own spellout. As a result, the ϕP is moved over the \tsc{k}P (allowing the \tsc{k}P to form a constituent on its own, as only constituents can be spelled out). This crucially differs from the internal-only type of language, in which \tsc{k}P and ϕP are spelled out a by a single morpheme and no movement is taking place. In this section I show how this difference leads to different deletion possibilities and, therefore, to different grammaticality patterns. In Chapter \ref{ch:deriving-matching}, I motivate this analysis I put forward for the matching type of language.
 
 In Figure \ref{fig:nom-nom-matching}, I give an example in which the light head and the relative pronoun bear the same case.
 
@@ -442,8 +442,8 @@ In Figure \ref{fig:nom-nom-matching}, I give an example in which the light head 
 \end{figure}
 
 I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
-In this instance it no problem that the ϕP has moved over the \tsc{nom}P.
-The light head (the \tsc{nom}P) still forms a constituent within the relative pronoun (the \tsc{rel}P), so the relative pronoun can delete the light head. I illustrate this by marking the content of the dashed circles for the light head gray.
+In this instance it is no problem that the ϕP has moved over the \tsc{nom}P.
+The light head (the \tsc{nom}P) still forms a constituent within the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
 
 In Figure \ref{fig:nom-acc-matching}, I give an example in which the relative pronoun bears a more complex case than the light head.
 
@@ -513,7 +513,7 @@ In Figure \ref{fig:nom-acc-matching}, I give an example in which the relative pr
 \end{figure}
 
 I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
-The light head (the \tsc{nom}P) no longer forms a constituent within the relative pronoun (the \tsc{rel}P). Therefore, the relative pronoun cannot delete the light head, which I illustrate this by leaving the content of both dashed circles unfilled.
+The light head (the \tsc{nom}P) no longer forms a constituent within the relative pronoun (the \tsc{rel}P). Therefore, the relative pronoun cannot delete the light head, which I illustrate by leaving the content of both dashed circles unfilled.
 It shows that in this instance it is a problem the ϕP has moved over the \tsc{nom}P or \tsc{acc}P.
 
 Something else the example shows is the necessity to formulate the proposal in terms of constituent containment instead of feature containment. To illustrate the difference, I show the example from the internal-only type in which the relative pronoun could delete the light head in Figure \ref{fig:nom-acc-intonly-rep}, repeated from \ref{fig:nom-acc-intonly}.
@@ -578,7 +578,7 @@ However, the features are structured differently, in such a way that the light h
 
 In sum, constituent containment is a stronger requirement than feature containment. Only this stronger requirement is able to distinguish the internal-only from the matching type. Therefore, this account crucially relies on constituent containment being the containment requirement that needs to be fulfilled.
 
-Constituent containment is not only the requirement for deletion in headless relatives. It is also what seems to be crucial in the deletion of nominal modifiers. \citet{cinqueforthcoming} argues that nominal modifiers can only be absent if they form a constituent with the NP. If they are not, they can also not be interpreted.
+Constituent containment is not only the requirement for deletion in headless relatives. It is also what seems to be crucial in NP ellipsis in general. \citet{cinqueforthcoming} argues that nominal modifiers can only be absent if they form a constituent with the NP. If they do not, they can also not be interpreted and ellipsis is ungrammatical.
 
 In \ref{ex:dutch-houses}, I give an example of a conjunction with two noun phrases from Dutch. The first conjunct consists of a demonstrative, an adjective and a noun, and the second one only of a demonstrative.
 
@@ -639,8 +639,9 @@ houses-those white-\tsc{pl} and these\\
 `those white houses and these houses'\\
 not: `those white houses and these white houses'\label{ex:kipsigis-houses} \flushfill{Kipsigis, \pgcitealt{cinqueforthcoming}{24}}
 
-The adjective \tit{leel} `white' does not forms a constituent with \tit{kaarii} `houses'. I showed this in Figure \ref{fig:kipsigis-houses} under first conjunct. In the second conjunct, the adjective and the noun are deleted. Different from the Dutch example in \ref{fig:dutch-houses}, this is not a single constituent. The adjective cannot be interpreted in \ref{ex:kipsigis-houses}, because it does not form a constituent with the noun.
+The adjective \tit{leel} `white' does not forms a constituent with \tit{kaarii} `houses'. I show this in Figure \ref{fig:kipsigis-houses} under first conjunct. In the second conjunct, the adjective and the noun are deleted. Different from the Dutch example in \ref{fig:dutch-houses}, this is not a single constituent. The adjective cannot be interpreted in \ref{ex:kipsigis-houses}, because it does not form a constituent with the noun.
 
+%this tree cannot be derived..
 \begin{figure}[htbp]
   \center
   \begin{tabular}[b]{ccc}
@@ -648,49 +649,53 @@ The adjective \tit{leel} `white' does not forms a constituent with \tit{kaarii} 
       first conjunct & & second conjunct \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-        [YP
-            [Agr\scsub{w}P
-                [NP,
-                tikz={
-                \node[draw,circle,
-                dashed,
-                scale=0.85,
-                fit to=tree]{};
-                }
-                ]
-                [DemP]
-            ]
-            [AP,
+        [WP
+            [NP,
             tikz={
             \node[draw,circle,
             dashed,
             scale=0.85,
             fit to=tree]{};
             }
+            ]
+            [WP
+                [DemP]
+                [YP
+                    [AP,
+                    tikz={
+                    \node[draw,circle,
+                    dashed,
+                    scale=0.85,
+                    fit to=tree]{};
+                    }
+                    ]
+                ]
             ]
         ]
       \end{forest}
       & \phantom{x} &
       \begin{forest} boom
-        [YP
-            [Agr\scsub{w}P
-                [NP,
-                tikz={
-                \node[draw,circle,
-                dashed,
-                scale=0.85,
-                fit to=tree]{};
-                }
-                ]
-                [DemP]
-            ]
-            [AP,
+        [WP
+            [NP,
             tikz={
             \node[draw,circle,
             dashed,
             scale=0.85,
             fit to=tree]{};
             }
+            ]
+            [WP
+                [DemP]
+                [YP
+                    [AP,
+                    tikz={
+                    \node[draw,circle,
+                    dashed,
+                    scale=0.85,
+                    fit to=tree]{};
+                    }
+                    ]
+                ]
             ]
         ]
       \end{forest}\\
@@ -700,9 +705,9 @@ The adjective \tit{leel} `white' does not forms a constituent with \tit{kaarii} 
    \label{fig:kipsigis-houses}
 \end{figure}
 
-This observation regarding the deletion of nominal modifiers provides independent evidence for my assumption that constituent containment is the crucial requirement for deletion of the light head or the relative pronoun in headless relatives.
+This observation regarding NP ellipsis provides independent evidence for my assumption that constituent containment is the crucial requirement for deletion of the light head or the relative pronoun in headless relatives.
 
-For completeness, I give an example in which the light head bears a more complex case than the relative pronoun in Figure
+For completeness, I give an example in which the light head bears a more complex case than the relative pronoun in Figure \ref{fig:acc-nom-matching}.
 
 \begin{figure}[htbp]
   \center
@@ -771,7 +776,7 @@ For completeness, I give an example in which the light head bears a more complex
 
 I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
 Neither the light head nor the relative pronoun forms a constituent within the other element. It is even the case that both contain features that the other one does not contain.
-The relative pronoun cannot delete the light head, which I illustrate this by leaving the content of both dashed circles unfilled.
+The relative pronoun cannot delete the light head, which I illustrate by leaving the content of both dashed circles unfilled.
 
 The comparisons between the constituents within the light heads and the relative pronouns correctly derive the patterns observed in the matching type of language.
 In matching languages, headless relatives are only grammatical when the internal and the external case match. When one of them is more complex than the other one, there is no longer a grammatical outcome possible. I summarize this in \ref{tbl:overview-rel-light-pol}.
@@ -797,28 +802,7 @@ In matching languages, headless relatives are only grammatical when the internal
 
 \subsection{The unrestricted type}
 
-The difference between the internal-only type and the unrestricted type lies in when the external case is more complex than the internal case. In the internal-only type this is ungrammatical, and in the unrestricted type, it is grammatical. This means that the light head can delete the relative pronoun when its case is more complex. I show overview of the language in \ref{tbl:overview-rel-light-ohg}.
-
-\begin{table}[htbp]
-  \center
-  \caption{Grammaticality in the matching type}
-\begin{tabular}{cc}
-  \toprule
-                                        & surface pronoun             \\
-  \cmidrule(lr){2-2}
-\tsc{k}\scsub{int} = \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int/ext}     \\
-\tsc{k}\scsub{int} > \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int}         \\
-\tsc{k}\scsub{int} < \tsc{k}\scsub{ext} & \tsc{lh}\scsub{ext}         \\
-\bottomrule
-\end{tabular}
-\label{tbl:overview-rel-light-ohg}
-\end{table}
-
-In order to let the relative pronoun form a constituent within the light head, I suggest two modifications should be made from the internal-only structure: a change in constituency and a syncretism.\footnote{
-Another option is that the relative pronoun does not actually form a constituent within the light head. Instead, the relative features form a separate constituent which is not deleted. In this chapter I only discuss the situation in which the relative pronoun as a whole forms a constituent within the light head, and the relative pronoun is deleted as a whole. I return to the deletion of separate constituents in Chapter \ref{ch:discussing-unrestricted}.
-}
-I start with the change in constituency. Again, what I display here is a simplification of the real proposal, in which I derive the difference in constituency by movement from the same base structure.
-In the internal only type, the case features appear between the phi-features and the relative features, as shown in Figure \ref{fig:rel-lh-intonly-rep1}
+I end with the unrestricted type of language. In this type of language, the constituency is the same as in the internal-only type of language as shown in Figure \ref{fig:rel-lh-intonly-2}.
 
 \begin{figure}[htbp]
   \center
@@ -830,7 +814,7 @@ In the internal only type, the case features appear between the phi-features and
       [\tsc{k}P,
           [\tsc{k}]
           [ϕP
-              [ϕ, baseline]
+              [\phantom{xxx}, roof, baseline]
           ]
       ]
       \end{forest}
@@ -843,20 +827,21 @@ In the internal only type, the case features appear between the phi-features and
           [\tsc{k}P
               [\tsc{k}]
               [ϕP
-                  [ϕ, baseline]
+                  [\phantom{xxx}, roof, baseline]
               ]
           ]
       ]
     \end{forest}\\
       \bottomrule
   \end{tabular}
-   \caption {\tsc{lh} and \tsc{rp} in the internal-only type (repeated)}
-  \label{fig:rel-lh-intonly-rep1}
+   \caption {\tsc{lh} and \tsc{rp} in the unrestricted type}
+  \label{fig:rel-lh-intonly-2}
 \end{figure}
 
-In the matching type, I suggested that the case features appear lower in the structure, namely below the phi features.
-For the unrestricted type, I suggest that the case features appear higher in the structure, namely above the relative features, as shown in Figure \ref{fig:rel-lh-unrest}.
-Of course, this difference compared to the internal-only type can only be noticed in the relative pronoun, since the light head does not have relative features.
+The \tsc{k}P is spelled out a whole, including the ϕP. The \tsc{rel}P has its own spellout and is merged as a prefix to the \tsc{k}P. Chapter \ref{ch:deriving-unrestricted} motivates this analysis.
+
+
+In Figure \ref{fig:nom-nom-unres}, I give an example in which the relative pronoun and the light head bear the same case.
 
 \begin{figure}[htbp]
   \center
@@ -865,30 +850,123 @@ Of course, this difference compared to the internal-only type can only be notice
       light head & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-      [\tsc{k}P,
-          [\tsc{k}]
-          [ϕP
-              [ϕ, baseline]
-          ]
-      ]
+        [\tsc{nom}P,
+        tikz={
+        \node[draw,circle,
+        dashed,
+        scale=0.85,
+        fill=DG,fill opacity=0.2,
+        fit to=tree]{};
+        }
+            [\tsc{f}1]
+            [ϕP
+                [\phantom{xxx}, roof, baseline]
+            ]
+        ]
       \end{forest}
       & \phantom{x} &
-    \begin{forest} boom
-      [\tsc{k}P
-          [\tsc{k}]
-          [\tsc{rel}P
-              [\tsc{rel}]
-              [ϕP
-                  [ϕ, baseline]
-              ]
-          ]
-      ]
-    \end{forest}\\
+      \begin{forest} boom
+        [\tsc{rel}P
+            [\tsc{rel}P
+                [\phantom{xxx}, roof, baseline]
+            ]
+            [\tsc{nom}P,
+            tikz={
+            \node[draw,circle,
+            dashed,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{f}1]
+                [ϕP
+                    [\phantom{xxx}, roof, baseline]
+                ]
+            ]
+        ]
+      \end{forest}\\
       \bottomrule
   \end{tabular}
-   \caption {\tsc{lh} and \tsc{rp} in the unrestricted type (to be revised)}
-  \label{fig:rel-lh-unrest}
+   \caption {\tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{nom} in the unrestricted type}
+  \label{fig:nom-nom-unres}
 \end{figure}
+
+I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
+The light head (the \tsc{nom}P) forms a constituent within the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
+
+In Figure \ref{fig:nom-acc-intonly}, I give an example in which the relative pronoun bears a more complex case than the light head.
+
+\begin{figure}[htbp]
+  \center
+  \begin{tabular}[b]{ccc}
+      \toprule
+      light head & & relative pronoun \\
+      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+      \begin{forest} boom
+        [\tsc{nom}P,
+        tikz={
+        \node[draw,circle,
+        dashed,
+        scale=0.85,
+        fill=DG,fill opacity=0.2,
+        fit to=tree]{};
+        }
+            [\tsc{f}1]
+            [ϕP
+                [\phantom{xxx}, roof, baseline]
+            ]
+        ]
+      \end{forest}
+      & \phantom{x} &
+      \begin{forest} boom
+        [\tsc{rel}P
+            [\tsc{rel}P
+                [\phantom{xxx}, roof, baseline]
+            ]
+            [\tsc{acc}P
+                [\tsc{f}2]
+                [\tsc{nom}P,
+                tikz={
+                \node[draw,circle,
+                dashed,
+                scale=0.85,
+                fit to=tree]{};
+                }
+                    [\tsc{f}1]
+                    [ϕP
+                        [\phantom{xxx}, roof, baseline]
+                    ]
+                ]
+            ]
+        ]
+      \end{forest}\\
+      \bottomrule
+  \end{tabular}
+   \caption {\tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{acc} in the unrestricted type}
+  \label{fig:nom-acc-unres}
+\end{figure}
+
+I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
+The light head (the \tsc{nom}P) still forms a constituent within the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
+
+
+
+
+
+
+
+
+
+The difference between the internal-only type and the unrestricted type lies in when the external case is more complex than the internal case. In the internal-only type this is ungrammatical, and in the unrestricted type, it is grammatical. This means that the light head can delete the relative pronoun when its case is more complex. I show overview of the language in \ref{tbl:overview-rel-light-ohg}.
+
+
+
+
+\footnote{
+Another option is that the relative pronoun does not actually form a constituent within the light head. Instead, the relative features form a separate constituent which is not deleted. In this chapter I only discuss the situation in which the relative pronoun as a whole forms a constituent within the light head, and the relative pronoun is deleted as a whole. I return to the deletion of separate constituents in Chapter \ref{ch:discussing-unrestricted}.
+}
+
+
+
 
 This brings me to the second change: syncretism. I suggest that there is a syncretism between the phi-features and the phi-features plus the relative features. That is, there is a lexical entry for the \tsc{rel}P which contains the feature \tsc{rel} and feature ϕ, but not a more specific one that spells out ϕ on its own. In \ref{ex:entry-alpha}, I give the lexical entry, which spells out as /α/.
 
@@ -1012,9 +1090,7 @@ In Figure \ref{fig:nom-acc-unrest}, I give an example in which the relative pron
                 fit to=tree]{};
                 }
                     [\tsc{rel}]
-                    [ϕP
-                        [ϕ, baseline]
-                    ]
+                    [ϕP, baseline]
                 ]
             ]
         ]
@@ -1188,7 +1264,28 @@ The light head (the \tsc{acc}P) forms a constituent that corresponds to \tit{β}
 I illustrate this by drawing a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun and by marking the content of the dashed circles for the light head gray.
 This means that a less complex case can delete a more complex case when there is a syncretic form between the two.
 
-Summing up, syncretic forms overwrite syntactic structure. A less complex structure can delete a more complex structure when there is a syncretism between the two.
+
+
+
+
+The comparisons between the constituents within the light heads and the relative pronouns correctly derive the patterns observed in the unrestricted type of language.
+In unrestricted languages, all types of headless relatives are grammatical: when the internal and the external case match, when the internal case is more complex and when the external case is more complex. I summarize this in \ref{tbl:overview-rel-light-ohg}.
+
+\begin{table}[htbp]
+  \center
+  \caption{Grammaticality in the matching type}
+\begin{tabular}{cc}
+  \toprule
+                                        & surface pronoun             \\
+  \cmidrule(lr){2-2}
+\tsc{k}\scsub{int} = \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int/ext}     \\
+\tsc{k}\scsub{int} > \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int}         \\
+\tsc{k}\scsub{int} < \tsc{k}\scsub{ext} & \tsc{lh}\scsub{ext}         \\
+\bottomrule
+\end{tabular}
+\label{tbl:overview-rel-light-ohg}
+\end{table}
+
 
 \section{Summary}
 
